@@ -409,6 +409,11 @@ ged_concat_core(struct ged *gedp, int argc, const char *argv[])
     if (argc > 1)
 	cc_data.affix = std::string(argv[1]);
 
+    // For compatibility (and because '/' isn't a sane character to use for obj
+    // names in any case) clear if such a character was supplied.
+    if (BU_STR_EQUAL(argv[1], "/"))
+	cc_data.affix = std::string("");
+
     // For all incoming objects, compare their names against the current
     // database.  In case of any collisions, generate a new unique name based
     // on the options.  If we can't do this successfully, we can't concat the
